--- a/README.rdoc
+++ b/README.rdoc
@@ -104,11 +104,25 @@ ip of the remote syslog server.
   class { 'syslogng':
     ensure => present,
     services => {
-     'syslog-ng' => {},
+     'syslog-ng' => {}
     },
     destinations => {
-      'remote-host-a' => { type => 'syslog', 'services' => { 'syslog-ng-a' => { 'service' => 'syslog-ng' } } },
-      'remote-host-b' => { type => 'syslog', 'services' => { 'syslog-ng-b' => { 'service' => 'syslog-ng' } } },
+      'remote-host-a' => { 
+        type => 'syslog', 
+        services => {
+          'syslog-ng-a' => {
+            service => 'syslog-ng'
+          }
+        }
+      }
+      'remote-host-b' => {
+        type => 'syslog',
+        services => {
+          'syslog-ng-b' => {
+            service' => 'syslog-ng
+          }
+        }
+      }
     }
   }
 
